Hide all project and job overviews
Switch all the unordered lists and list items to div's to standardize alignment. Additionally add the hidden class to the job and project descriptions as well as the tech stack that was utilized.

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
                 <nav class="main-nav solid-black-border">
                     <ul>
                         <div class="sub-nav solid-black-border">
-                            <ul class="navbar-item"> About
+                            <ul class="navbar-item"><p class="navbar-item-title">About</p> 
                                 <li class="sub-navbar-item hidden"><a href="about">About</a></li>
                                 <li class="sub-navbar-item hidden"><a href="contact">Contact</a></li>
                             </ul>
                         </div>
                         <div class="sub-nav solid-black-border">
-                            <ul class="navbar-item">Professional Experience
+                            <ul class="navbar-item"><p>Professional Experience</p>
                                 <li class="navbar-item solid-black-border hidden"><a href="#professional-experience">Professional Experience</a></li>
                             </ul>
                         </div>
                         <div class="sub-nav solid-black-border">
-                            <ul class="navbar-item">Projects
+                            <ul class="navbar-item"><p>Projects</p>
                                 <li class="sub-nav navbar-item solid-black-border hidden"><a href="#projects">Projects</a></li>
                             </ul>
                         </div>
@@ -33,98 +33,97 @@
             </div>
         </header>   
         <div>
-            <ul>Professional Experience
-                <ul class="solid-black-border title"><h2 class="title">Reporting Analyst 4, AMN Healthcare</h2>
-                    <ul class="detail-toggle">Job Overview
-                        <li class="hidden">Transitioned the New Grad program into a PowerBI application eliminating 10+ hours of month end work by automating analysis and communication of clinician bonus eligibility to senior management.
+            <div>Professional Experience
+                <div class="solid-black-border title"><p class="title">Reporting Analyst 4, AMN Healthcare</p>
+                    <div class="detail-toggle">Job Overview
+                        <p class="hidden">Transitioned the New Grad program into a PowerBI application eliminating 10+ hours of month end work by automating analysis and communication of clinician bonus eligibility to senior management.
                             Owned the product development of an internal application tracking clinician application roadblocks resulting in a reduction of the average application time by over 5 days.
                             Migrated 5 QlikSense reports relying on SQL to Snowflake and PowerBI reducing refresh time by over 35 minutes (~78%).
                             Automated 5+ hours of weekly work by transitioning dynamic SQL into paginated reports.
-                        </li>
-                    </ul>
-                    <li>Tech Stack: SQL, Snowflake, PowerBI, Excel, Azure, DevOps </li>
-                </ul>
-                <ul class="solid-black-border title"><h2 class="title">Business Reporting Analyst, Baker Tilly US</h2>
-                    <ul class="detail-toggle">Job Overview
-                        <li class="hidden">Collaborated with the Finance department to build out a PowerBI application highlighting KPIs in resource management and adoption of business intelligence tools. 
+                        </p>
+                        <p class="hidden">Tech Stack: SQL, Snowflake, PowerBI, Excel, Azure, DevOps </p>
+                    </div>
+                    
+                </div>
+                <div class="solid-black-border title"><p class="title">Business Reporting Analyst, Baker Tilly US</p>
+                    <div class="detail-toggle">Job Overview
+                        <p class="hidden">Collaborated with the Finance department to build out a PowerBI application highlighting KPIs in resource management and adoption of business intelligence tools. 
                             Built a revenue forecasting PowerBI application for the firm's Partners highlighting fiscal year performance in response to COVID-19.
                             Optimized 20+ SQL views used by an internal application leading to a reduction in Help Desk tickets regarding application failure and data quality issues.
                             Owned product development of a PowerBI application identifying over 40 reports for decommission based on usage over the past 2 fiscal years.
                             Leveraged ticketing services such as ServiceNow and EasyVista to resolve 200+ ad hoc data and reporting requests.
                             Updated date function that was source of data quality issue permeating through 150+ SQL data objects in the firm's production environment.
-                        </li>
-                    </ul>
-                    <li>Tech Stack: SQL, PowerBI, SSRS, Excel, Azure, DevOps</li>
-                </ul>
-                <ul class="solid-black-border title"><p class="title">IT Analyst, Ecolab</p>
-                    <ul class="detail-toggle">Job Overview
-                        <li class="hidden">Managed 8-member international team, tracking progress, resolving roadblocks, and maintaining the product backlog in Azure DevOps in order to deliver an enterprise-wide ChatBot.
+                        </p>
+                        <p class="hidden">Tech Stack: SQL, PowerBI, SSRS, Excel, Azure, DevOps</p>
+                    </div>
+                </div>
+                <div class="solid-black-border title"><p class="title">IT Analyst, Ecolab</p>
+                    <div class="detail-toggle">Job Overview
+                        <p class="hidden">Managed 8-member international team, tracking progress, resolving roadblocks, and maintaining the product backlog in Azure DevOps in order to deliver an enterprise-wide ChatBot.
                             Served in Project Manager, Business Analyst, and BI Developer roles to assist in the deployment of 60 Marketing, Sales, and Finance reports for the Healthcare department.
                             Gathered requirements, lead UAT, and orchestrated Go-Live plan of over 10 compensation and bonus reports for the Field Operations Finance team.
                             Managed the retirement and migration of 100+ Windows 2008 servers across the firm.
                             Constructed department's production release notes providing Ecolab leadership with a high-level view of business impact from completed development.
-                        </li>
-                    </ul>
-                    <li>Skills/Tools Utilized: PowerBI, SQL, Excel, DevOps, AdobeXD</li>
-                </ul>
-                <ul class="role solid-black-border title"><p class="title">IT Intern, Ecolab</p>
-                    <ul class="detail-toggle">Job Overview
-                        <li class="hidden">Built a PowerBI dashboard highlighting the computational costs associated with Microsoft Azure resulting in optimizations, saving the IT department over $50,000 in under 4 months.
+                        </p>
+                        <p class="hidden">Skills/Tools Utilized: PowerBI, SQL, Excel, DevOps, AdobeXD</p>
+                    </div>
+                </div>
+                <div class="role solid-black-border title"><p class="title">IT Intern, Ecolab</p>
+                    <div class="detail-toggle">Job Overview
+                        <p class="hidden">Built a PowerBI dashboard highlighting the computational costs associated with Microsoft Azure resulting in optimizations, saving the IT department over $50,000 in under 4 months.
                             Served in Project Manager, Business Analyst, and BI Developer roles assisting in the development of 60+ enterprise reports.
-                        </li>
-                    </ul>
-                    <li>Tech Stack: PowerBI, Excel, DevOps</li>
-                </ul>
-                <ul class=" solid-black-border title"><h2 class="title">Electrical Engineering Intern, Astronautics Corporation of America</h2>
-                    <ul class="detail-toggle">Job Overview
-                        <li class="hidden">Utilized Excel VBA to analyze over 10,000 flight records to verify the failure rates of electrical components found in the company's Aerospace and Astronautic products.
-                        </li>
-                    </ul>
-                    <li>Tech Stack: Excel, VBA</li>
-                </ul>
-            </ul>    
+                        </p>
+                        <p class="hidden">Tech Stack: PowerBI, Excel, DevOps<p></p>
+                    </div>
+                </div>
+                <div class=" solid-black-border title"><p class="title">Electrical Engineering Intern, Astronautics Corporation of America</p>
+                    <div class="detail-toggle">Job Overview
+                        <p class="hidden">Utilized Excel VBA to analyze over 10,000 flight records to verify the failure rates of electrical components found in the company's Aerospace and Astronautic products.
+                        </p>
+                        <p class="hidden">Tech Stack: Excel, VBA</p>
+                    </div>
+                </div>
+            </div>    
         </div>
         <div class="personal-projects">
-            <ul class="section-header">Side Projects
-                <ul class="solid-black-border"><p class="title">Project 1: Personal Website</p>
-                    <ul class="detail-toggle">Project Overview
-                        <li>I built a personal website to provide insight on all my professional-related development. 
+            <div class="section-header">Personal Projects
+                <div class="solid-black-border"><p class="title">Project 1: Personal Website</p>
+                    <div class="detail-toggle">Overview
+                        <p class="hidden">I built a personal website to provide insight on all my professional-related development. 
                             This is an effort to showcase what I've been able to accomplish in a proffessional setting as well some of my interests outside of my day to day. Please enjoy! 
-                        </li>
-                    </ul>
-                    <li>Tech Stack: JavaScript, HTML, CSS, Git</li>
-                </ul>
-                <ul class="solid-black-border"><p class="title">Project 2: Pokemon Comparison</p>
-                    <ul class="detail-toggle">Brief Project Description
-                        <li>I built a model in python that compares male and female soccer players to their equivalent in the Pokemon (gen 1) universe. 
+                        </p>
+                        <p class="hidden">Tech Stack: JavaScript, HTML, CSS, Git</p>
+                    </div>
+                </div>
+                <div class="solid-black-border"><p class="title">Project 2: Pokemon Comparison</p>
+                    <div class="detail-toggle">Overview
+                        <p class="hidden">I built a model in python that compares male and female soccer players to their equivalent in the Pokemon (gen 1) universe. 
                             This model utilizes over X many (non-physical) features to analyze and predict their equivalent. 
                             The goal of this project is to showcase my ability to work with mulitple large datasets, understand basic concepts in Python and Pandas, and most importantly find a fun project to complete in Python.
-                        </li>
-                    </ul>
-                    <li>Tech Stack: Python, Pandas, JavaScript, HMTL, CSS, Git,</li>
-                    <li><a href="#">Link to site</a></li>
-                </ul>
-                <ul class="solid-black-border"><p class="title">Project 3: Recipe Converter</p>
-                    <ul class="detail-toggle">Brief Project Description
-                        <li>This project was a last minute addition inspired by the frustration of finding holiday related recipes for a gathering with my friends.
+                        </p>
+                        <p class="hidden">Tech Stack: Python, Pandas, JavaScript, HMTL, CSS, Git,</p>
+                        <p><a href="#">Link to site</a></p>
+                    </div>
+                    
+                </div>
+                <div class="solid-black-border"><p class="title">Project 3: Recipe Converter</p>
+                    <div class="detail-toggle">Overview
+                        <p class="hidden">This project was a last minute addition inspired by the frustration of finding holiday related recipes for a gathering with my friends.
                             All online recipes seem to have a horrible habit of wrapping a simple list of ingredients and steps with a 1000 word life story of the writer. 
                             The sole purpose of this website is to eliminate the bullshit that encompasses these great recipes. 
-                        </li>
-                    </ul>
-                    <li>Tech Stack: HTML, CSS, JavaScript, Python, Pandas, Git</li>
-                    <li><a href="#">Link to site</a></li>
-                </ul>
-            </ul>
-        </div>
-        <div>
-            <div>
-                <p>A Brooklyn based Data Analyst aspiring to transition their career into Web Development.</p>
+                        </p>
+                        <p class="hidden">Tech Stack: HTML, CSS, JavaScript, Python, Pandas, Git</p>
+                        <p><a href="#">Link to site</a></li></p>
+                    </div>
+                </div>
             </div>
-            <ul >Contact Information
-                <li class="link solid-black-border"><a href="https://www.linkedin.com/in/zmadson/">Github</a></li>
-                <li class="link solid-black-border"><a href="https://www.linkedin.com/in/zmadson/">LinkedIn</a></li>
-                <li class="link solid-black-border"><a href="#">Resume</a></li>
-            </ul> 
+        </div>
+        <div class="solid-black-border contact">
+            <div>Contact Information
+                <p class="link solid-black-border"><a href="https://www.linkedin.com/in/zmadson/">Github</a></p>
+                <p class="link solid-black-border"><a href="https://www.linkedin.com/in/zmadson/">LinkedIn</a></p>
+                <p class="link solid-black-border"><a href="#">Resume</a></p>
+            </div> 
         </div>
     </body>
 </html>
