Update Navbar for options to take up entire screen
Update the nav bar so that the options take up an equal amount of space horizontally.

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
             <h4>Brooklyn based BI Developer, Data Analyst, Data Engineer, and aspiring Web Developer.</h5>
             <nav class="main-nav solid-black-border">
                 <div class="sub-nav solid-black-border">
-                    <ul class="navbar-item"><p class="navbar-item-title">About</p> 
+                    <ul><p class="navbar-item title">About</p> 
                         <li class="sub-navbar-item hidden"><a href="about">About</a></li>
                         <li class="sub-navbar-item hidden"><a href="contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="sub-nav solid-black-border">
-                    <ul class="navbar-item"><p>Professional Experience</p>
+                    <ul><p class="navbar-item title">Professional Experience</p>
                         <li class="navbar-item solid-black-border hidden"><a href="#professional-experience">Professional Experience</a></li>
                     </ul>
                 </div>
                 <div class="sub-nav solid-black-border">
-                    <ul class="navbar-item"><p>Projects</p>
+                    <ul><p class="navbar-item title">Projects</p>
                         <li class="sub-nav navbar-item solid-black-border hidden"><a href="#projects">Projects</a></li>
                     </ul>
                 </div>
