Bold face project over view and links in project section
The overview and link to sites were not matching boldface with the job section of the website.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>    
         <div class="personal-projects">
             <div class="section-header">Personal Projects
-                <div class="solid-black-border"><p class="title">Project 1: Personal Website</p>
+                <div class="solid-black-border title"><p class="title">Project 1: Personal Website</p>
                     <div class="detail-toggle">Overview
                         <p class="hidden">I built a personal website to provide insight on all my professional-related development. 
                             This is an effort to showcase what I've been able to accomplish in a proffessional setting as well some of my interests outside of my day to day. Please enjoy! 
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="solid-black-border"><p class="title">Project 2: Pokemon Comparison</p>
-                    <div class="detail-toggle">Overview
+                    <div class="detail-toggle title">Overview
                         <p class="hidden">I built a model in python that compares male and female soccer players to their equivalent in the Pokemon (gen 1) universe. 
                             This model utilizes over X many (non-physical) features to analyze and predict their equivalent. 
                             The goal of this project is to showcase my ability to work with mulitple large datasets, understand basic concepts in Python and Pandas, and most importantly find a fun project to complete in Python.
@@ -99,11 +99,11 @@
                     </div>
                     
                 </div>
-                <div class="solid-black-border"><p class="title">Project 3: Recipe Converter</p>
-                    <div class="detail-toggle">Overview
-                        <p class="hidden">This project was a last minute addition inspired by the frustration of finding holiday related recipes for a gathering with my friends.
-                            All online recipes seem to have a horrible habit of wrapping a simple list of ingredients and steps with a 1000 word life story of the writer. 
-                            The sole purpose of this website is to eliminate the bullshit that encompasses these great recipes. 
+                <div class="solid-black-border"><p class="title">Project 3: Remember Tool</p>
+                    <div class="detail-toggle title">Overview
+                        <p class="hidden">This project came to mind when i came across a recipe I wanted to try and when i was opening my notes app 
+                            I realized that I didn't love the functionality and thought making my own website that saved things for the future was 
+                            a great project.
                         </p>
                         <p class="hidden">Tech Stack: HTML, CSS, JavaScript, Python, Pandas, Git</p>
                         <p><a href="#">Link to site</a></li></p>
