Update links to point at appropriate destinations
Updated links to point at the appropriate sites / files. Specifically, github.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <div class="solid-black-border contact">
             <div>Contact Information
-                <p class="link solid-black-border"><a href="https://www.linkedin.com/in/zmadson/">Github</a></p>
+                <p class="link solid-black-border"><a href="https://github.com/zekomadson">Github</a></p>
                 <p class="link solid-black-border"><a href="https://www.linkedin.com/in/zmadson/">LinkedIn</a></p>
                 <p class="link solid-black-border"><a href="#">Resume</a></p>
             </div> 
