--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header>
             <h1 class="header">Zeko Madson</h1>
             <h4>Brooklyn based BI Developer, Data Analyst, Data Engineer, and aspiring Web Developer.</h5>
-            <nav class="main-nav solid-black-border">
+            <nav class="main-nav solid-purple-border">
                 <div class="sub-nav solid-black-border">
                     <ul><p class="navbar-item title">About</p> 
                         <li class="sub-navbar-item hidden"><a href="about">About</a></li>
@@ -28,7 +28,7 @@
                 </div>
             </nav>       
         </header>   
-        <div>Professional Experience
+        <div class="solid-purple-border">Professional Experience
             <div class="solid-black-border title"><p class="title">Reporting Analyst 4, AMN Healthcare</p>
                 <div class="detail-toggle">Job Overview
                     <p class="hidden">Transitioned the New Grad program into a PowerBI application eliminating 10+ hours of month end work by automating analysis and communication of clinician bonus eligibility to senior management.
@@ -78,7 +78,7 @@
                 </div>
             </div>
         </div>    
-        <div class="personal-projects">
+        <div class="personal-projects solid-purple-border">
             <div class="section-header">Personal Projects
                 <div class="solid-black-border title"><p class="title">Project 1: Personal Website</p>
                     <div class="detail-toggle">Overview
@@ -111,7 +111,7 @@
                 </div>
             </div>
         </div>
-        <div class="solid-black-border contact">
+        <div class="solid-purple-border contact">
             <div>Contact Information
                 <p class="link solid-black-border"><a href="https://github.com/zekomadson">Github</a></p>
                 <p class="link solid-black-border"><a href="https://www.linkedin.com/in/zmadson/">LinkedIn</a></p>
