Addition of 2 side projects
Added 2 side projects to my portfolio that i want to begin development on. The Good Habit tracker which will be a simple desktop application and the Script tracker which will be an website that uses Google APIs to pull information from a google sheet that I've been maintaining of the years.

--- a/index.html
+++ b/index.html
@@ -99,14 +99,26 @@
                     </div>
                     
                 </div>
-                <div class="solid-black-border"><p class="title">Project 3: Remember Tool</p>
+                <div class="solid-black-border"><p class="title">Project 3: Script Website</p>
                     <div class="detail-toggle title">Overview
-                        <p class="hidden">This project came to mind when i came across a recipe I wanted to try and when i was opening my notes app 
-                            I realized that I didn't love the functionality and thought making my own website that saved things for the future was 
-                            a great project.
+                        <p class="hidden">I've been working on my scripting for years, practicing leetcode, along with a variety of other problem sets.
+                            I wanted a place where I could easily look up the problem, the solution, and the description of my solution. 
                         </p>
-                        <p class="hidden">Tech Stack: HTML, CSS, JavaScript, Python, Pandas, Git</p>
+                        <p class="hidden">Tech Stack: HTML, CSS, JavaScript, Python, APIs, Git</p>
                         <p><a href="#">Link to site</a></li></p>
+                    </div>
+                </div>
+                <div class="solid-black-border"><p class="title">Project 4: Habit Tracker</p>
+                    <div class="detail-toggle title">Overview
+                        <p class="hidden">I came up with this idea after looking for an application to track a variety of my habits that I want to reinforce
+                            given the new year. However, was having trouble finding any on the app store that I enjoyed and weren't full of ads.
+                        </p>
+                        <p class="hidden">Tech Stack: Python, Git</p>
+                        <p> Stack Explanation:
+                            - python: underlying script
+                            - git: version control
+                        </p>
+                        <p><a href="#">Link to github site</a></li></p>
                     </div>
                 </div>
             </div>
