--- a/index.html
+++ b/index.html
@@ -6,27 +6,31 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <header>
-            <h1 class="header">Zeko Madson</h1>
-            <h4>Brooklyn based BI Developer, Data Analyst, Data Engineer, and aspiring Web Developer.</h5>
-            <nav class="main-nav solid-purple-border">
-                <div class="sub-nav solid-black-border">
-                    <ul><p class="navbar-item title">About</p> 
-                        <li class="sub-navbar-item hidden"><a href="about">About</a></li>
-                        <li class="sub-navbar-item hidden"><a href="contact">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="sub-nav solid-black-border">
-                    <ul><p class="navbar-item title">Professional Experience</p>
-                        <li class="navbar-item solid-black-border hidden"><a href="#professional-experience">Professional Experience</a></li>
-                    </ul>
-                </div>
-                <div class="sub-nav solid-black-border">
-                    <ul><p class="navbar-item title">Projects</p>
-                        <li class="sub-nav navbar-item solid-black-border hidden"><a href="#projects">Projects</a></li>
-                    </ul>
-                </div>
-            </nav>       
+        <header class="container">
+            <div class="vertical-section">
+                <nav class="solid-purple-border">
+                    <div class="sub-nav solid-black-border">
+                        <ul><p class="navbar-item title">About</p> 
+                            <li class="sub-navbar-item hidden"><a href="about">About</a></li>
+                            <li class="sub-navbar-item hidden"><a href="contact">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="sub-nav solid-black-border">
+                        <ul><p class="navbar-item title">Professional Experience</p>
+                            <li class="navbar-item solid-black-border hidden"><a href="#professional-experience">Professional Experience</a></li>
+                        </ul>
+                    </div>
+                    <div class="sub-nav solid-black-border">
+                        <ul><p class="navbar-item title">Projects</p>
+                            <li class="sub-nav navbar-item solid-black-border hidden"><a href="#projects">Projects</a></li>
+                        </ul>
+                    </div>
+                </nav>   
+                <div>
+                    <h1 class="header">Zeko Madson</h1>
+                    <h4>Brooklyn based BI Developer and Data Analyst - Aspiring Software Developer.</h5>
+                </div>  
+            </div>
         </header>   
         <div class="solid-purple-border">Professional Experience
             <div class="solid-black-border title"><p class="title">Reporting Analyst 4, AMN Healthcare</p>
@@ -113,7 +117,7 @@
                         <p class="hidden">I came up with this idea after looking for an application to track a variety of my habits that I want to reinforce
                             given the new year. However, was having trouble finding any on the app store that I enjoyed and weren't full of ads.
                         </p>
-                        <p class="hidden">Tech Stack: Python, Git</p>
+                        <p class="hidden">Tech Stack: Swift, Xcode</p>
                         <p> Stack Explanation:
                             - python: underlying script
                             - git: version control
