Change background of header to purple with white writing
Update of the header portion of the website that includes the navigation bar, my name, and quick blurb about myself to have a purple background with white writing.

--- a/index.html
+++ b/index.html
@@ -7,28 +7,15 @@
     </head>
     <body>
         <header class="container">
-            <div class="vertical-section">
+            <div class="vertical-section purple-background">
                 <nav class="solid-purple-border">
-                    <div class="sub-nav solid-black-border">
-                        <ul><p class="navbar-item title">About</p> 
-                            <li class="sub-navbar-item hidden"><a href="about">About</a></li>
-                            <li class="sub-navbar-item hidden"><a href="contact">Contact</a></li>
-                        </ul>
-                    </div>
-                    <div class="sub-nav solid-black-border">
-                        <ul><p class="navbar-item title">Professional Experience</p>
-                            <li class="navbar-item solid-black-border hidden"><a href="#professional-experience">Professional Experience</a></li>
-                        </ul>
-                    </div>
-                    <div class="sub-nav solid-black-border">
-                        <ul><p class="navbar-item title">Projects</p>
-                            <li class="sub-nav navbar-item solid-black-border hidden"><a href="#projects">Projects</a></li>
-                        </ul>
-                    </div>
+                    <a class="navbar-item title white-font">About</a> 
+                    <a class="navbar-item title white-font">Professional Experience</a> 
+                    <a class="navbar-item title white-font">Projects</a>
                 </nav>   
                 <div>
-                    <h1 class="header">Zeko Madson</h1>
-                    <h4>Brooklyn based BI Developer and Data Analyst - Aspiring Software Developer.</h5>
+                    <h1 class="header white-font">Zeko Madson</h1>
+                    <h4 class="white-font">Brooklyn based BI Developer and Data Analyst - Aspiring Software Developer.</h5>
                 </div>  
             </div>
         </header>   
