--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <header class="container">
-            <div class="vertical-section purple-background">
-                <nav class="solid-purple-border">
+            <div class="vertical-section black-background">
+                <nav>
                     <a class="navbar-item title white-font">About</a> 
                     <a class="navbar-item title white-font">Professional Experience</a> 
                     <a class="navbar-item title white-font">Projects</a>
@@ -19,7 +19,7 @@
                 </div>  
             </div>
         </header>   
-        <div class="solid-purple-border">Professional Experience
+        <div class="purple-background">Professional Experience
             <div class="solid-black-border title"><p class="title">Reporting Analyst 4, AMN Healthcare</p>
                 <div class="detail-toggle">Job Overview
                     <p class="hidden">Transitioned the New Grad program into a PowerBI application eliminating 10+ hours of month end work by automating analysis and communication of clinician bonus eligibility to senior management.
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </div>    
-        <div class="personal-projects solid-purple-border">
+        <div class="black-blackground">
             <div class="section-header">Personal Projects
                 <div class="solid-black-border title"><p class="title">Project 1: Personal Website</p>
                     <div class="detail-toggle">Overview
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="solid-black-border"><p class="title">Project 4: Habit Tracker</p>
-                    <div class="detail-toggle title">Overview
+                    <div class="title">Overview
                         <p class="hidden">I came up with this idea after looking for an application to track a variety of my habits that I want to reinforce
                             given the new year. However, was having trouble finding any on the app store that I enjoyed and weren't full of ads.
                         </p>
@@ -114,11 +114,11 @@
                 </div>
             </div>
         </div>
-        <div class="solid-purple-border contact">
+        <div>
             <div>Contact Information
-                <p class="link solid-black-border"><a href="https://github.com/zekomadson">Github</a></p>
-                <p class="link solid-black-border"><a href="https://www.linkedin.com/in/zmadson/">LinkedIn</a></p>
-                <p class="link solid-black-border"><a href="#">Resume</a></p>
+                <p class="solid-black-border"><a href="https://github.com/zekomadson">Github</a></p>
+                <p class="solid-black-border"><a href="https://www.linkedin.com/in/zmadson/">LinkedIn</a></p>
+                <p class="solid-black-border"><a href="#">Resume</a></p>
             </div> 
         </div>
     </body>
