Update color palette
Update the color palette of the website including the background colors and the font colors

--- a/index.html
+++ b/index.html
@@ -69,57 +69,55 @@
                 </div>
             </div>
         </div>    
-        <div class="black-blackground">
-            <div class="section-header">Personal Projects
-                <div class="solid-black-border title"><p class="title">Project 1: Personal Website</p>
-                    <div class="detail-toggle">Overview
-                        <p class="hidden">I built a personal website to provide insight on all my professional-related development. 
+        <div class="blue-background">
+            <h2>Personal Projects</h2>
+            <div class="solid-black-border title"><p class="title">Project 1: Personal Website</p>
+                <div class="detail-toggle">Overview
+                    <p class="hidden">I built a personal website to provide insight on all my professional-related development. 
                             This is an effort to showcase what I've been able to accomplish in a proffessional setting as well some of my interests outside of my day to day. Please enjoy! 
-                        </p>
-                        <p class="hidden">Tech Stack: JavaScript, HTML, CSS, Git</p>
-                    </div>
+                    </p>
+                    <p class="hidden">Tech Stack: JavaScript, HTML, CSS, Git</p>
                 </div>
-                <div class="solid-black-border"><p class="title">Project 2: Pokemon Comparison</p>
-                    <div class="detail-toggle title">Overview
-                        <p class="hidden">I built a model in python that compares male and female soccer players to their equivalent in the Pokemon (gen 1) universe. 
-                            This model utilizes over X many (non-physical) features to analyze and predict their equivalent. 
-                            The goal of this project is to showcase my ability to work with mulitple large datasets, understand basic concepts in Python and Pandas, and most importantly find a fun project to complete in Python.
-                        </p>
-                        <p class="hidden">Tech Stack: Python, Pandas, JavaScript, HMTL, CSS, Git,</p>
-                        <p><a href="#">Link to site</a></p>
-                    </div>
-                    
+            </div>
+            <div class="solid-black-border"><p class="title">Project 2: Pokemon Comparison</p>
+                <div class="detail-toggle title">Overview
+                    <p class="hidden">I built a model in python that compares male and female soccer players to their equivalent in the Pokemon (gen 1) universe. 
+                        This model utilizes over X many (non-physical) features to analyze and predict their equivalent. 
+                        The goal of this project is to showcase my ability to work with mulitple large datasets, understand basic concepts in Python and Pandas, and most importantly find a fun project to complete in Python.
+                    </p>
+                    <p class="hidden">Tech Stack: Python, Pandas, JavaScript, HMTL, CSS, Git,</p>
+                    <p><a href="#">Link to site</a></p>
                 </div>
-                <div class="solid-black-border"><p class="title">Project 3: Script Website</p>
-                    <div class="detail-toggle title">Overview
-                        <p class="hidden">I've been working on my scripting for years, practicing leetcode, along with a variety of other problem sets.
-                            I wanted a place where I could easily look up the problem, the solution, and the description of my solution. 
-                        </p>
-                        <p class="hidden">Tech Stack: HTML, CSS, JavaScript, Python, APIs, Git</p>
-                        <p><a href="#">Link to site</a></li></p>
-                    </div>
+            </div>
+            <div class="solid-black-border"><p class="title">Project 3: Script Website</p>
+                <div class="detail-toggle title">Overview
+                    <p class="hidden">I've been working on my scripting for years, practicing leetcode, along with a variety of other problem sets.
+                        I wanted a place where I could easily look up the problem, the solution, and the description of my solution. 
+                    </p>
+                    <p class="hidden">Tech Stack: HTML, CSS, JavaScript, Python, APIs, Git</p>
+                    <p><a href="#">Link to site</a></li></p>
                 </div>
-                <div class="solid-black-border"><p class="title">Project 4: Habit Tracker</p>
-                    <div class="title">Overview
-                        <p class="hidden">I came up with this idea after looking for an application to track a variety of my habits that I want to reinforce
+            </div>
+            <div class="solid-black-border"><p class="title">Project 4: Habit Tracker</p>
+                <div class="title">Overview
+                    <p class="hidden">I came up with this idea after looking for an application to track a variety of my habits that I want to reinforce
                             given the new year. However, was having trouble finding any on the app store that I enjoyed and weren't full of ads.
-                        </p>
-                        <p class="hidden">Tech Stack: Swift, Xcode</p>
-                        <p> Stack Explanation:
-                            - python: underlying script
-                            - git: version control
-                        </p>
-                        <p><a href="#">Link to github site</a></li></p>
-                    </div>
+                    </p>
+                    <p class="hidden">Tech Stack: Swift, Xcode</p>
+                    <p> Stack Explanation:
+                        - python: underlying script
+                        - git: version control
+                    </p>
+                    <p><a href="#">Link to github site</a></li></p>
                 </div>
             </div>
         </div>
-        <div>
-            <div>Contact Information
-                <p class="solid-black-border"><a href="https://github.com/zekomadson">Github</a></p>
-                <p class="solid-black-border"><a href="https://www.linkedin.com/in/zmadson/">LinkedIn</a></p>
-                <p class="solid-black-border"><a href="#">Resume</a></p>
-            </div> 
-        </div>
+    </div>
+    <div class="white-background ">
+        <h2 class= "black-font">Contact Information</h2>
+        <a class= "black-font" href="https://github.com/zekomadson">Github</a>
+        <a class= "black-font" href="https://www.linkedin.com/in/zmadson/">LinkedIn</a>
+        <a class= "black-font" href="#">Resume</a>
+    </div>
     </body>
 </html>
