--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
                     <a class="navbar-item title white-font">Projects</a>
                 </nav>   
                 <div>
-                    <h1 class="header white-font">Zeko Madson</h1>
-                    <h4 class="white-font">Brooklyn based BI Developer and Data Analyst - Aspiring Software Developer.</h5>
+                    <h1 class="header white-font">Zach Madson</h1>
+                    <img src="images/portrait.JPG" alt="portrait of Zach Madson"> 
+                    <h4 class="white-font">Brooklyn based BI Developer and Data Analyst</h4>
+                    <h4>Aspiring Software Developer.</h4>
                 </div>  
             </div>
         </header>   
