--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         <header class="container">
             <div class="vertical-section black-background">
                 <nav>
-                    <a class="navbar-item title white-font">About</a> 
-                    <a class="navbar-item title white-font">Professional Experience</a> 
-                    <a class="navbar-item title white-font">Projects</a>
+                    <a class="navbar-item title white-font" href="/pages/about.html">About</a> 
+                    <a class="navbar-item title white-font" href="/pages/professional.html">Professional Experience</a> 
+                    <a class="navbar-item title white-font" href="/pages/projects.html">Projects</a>
                 </nav>   
                 <div>
                     <h1 class="header white-font">Zach Madson</h1>
                     <img src="images/portrait.JPG" alt="portrait of Zach Madson"> 
                     <h4 class="white-font">Brooklyn based BI Developer and Data Analyst</h4>
-                    <h4>Aspiring Software Developer.</h4>
+                    <h4>Aspiring Web Developer & Software Developer.</h4>
                 </div>  
             </div>
         </header>   
