--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <header class="container">
             <div class="vertical-section black-background">
                 <nav>
+                    <a class="navbar-item title white-font" href="">Home</a> 
                     <a class="navbar-item title white-font" href="/pages/about.html">About</a> 
                     <a class="navbar-item title white-font" href="/pages/professional.html">Professional Experience</a> 
                     <a class="navbar-item title white-font" href="/pages/projects.html">Projects</a>
@@ -21,105 +22,11 @@
                 </div>  
             </div>
         </header>   
-        <div class="purple-background">Professional Experience
-            <div class="solid-black-border title"><p class="title">Reporting Analyst 4, AMN Healthcare</p>
-                <div class="detail-toggle">Job Overview
-                    <p class="hidden">Transitioned the New Grad program into a PowerBI application eliminating 10+ hours of month end work by automating analysis and communication of clinician bonus eligibility to senior management.
-                            Owned the product development of an internal application tracking clinician application roadblocks resulting in a reduction of the average application time by over 5 days.
-                            Migrated 5 QlikSense reports relying on SQL to Snowflake and PowerBI reducing refresh time by over 35 minutes (~78%).
-                            Automated 5+ hours of weekly work by transitioning dynamic SQL into paginated reports.
-                    </p>
-                    <p class="hidden">Tech Stack: SQL, Snowflake, PowerBI, Excel, Azure, DevOps </p>
-                </div>       
-            </div>
-            <div class="solid-black-border title"><p class="title">Business Reporting Analyst, Baker Tilly US</p>
-                <div class="detail-toggle">Job Overview
-                    <p class="hidden">Collaborated with the Finance department to build out a PowerBI application highlighting KPIs in resource management and adoption of business intelligence tools. 
-                            Built a revenue forecasting PowerBI application for the firm's Partners highlighting fiscal year performance in response to COVID-19.
-                            Optimized 20+ SQL views used by an internal application leading to a reduction in Help Desk tickets regarding application failure and data quality issues.
-                            Owned product development of a PowerBI application identifying over 40 reports for decommission based on usage over the past 2 fiscal years.
-                            Leveraged ticketing services such as ServiceNow and EasyVista to resolve 200+ ad hoc data and reporting requests.
-                            Updated date function that was source of data quality issue permeating through 150+ SQL data objects in the firm's production environment.
-                    </p>
-                    <p class="hidden">Tech Stack: SQL, PowerBI, SSRS, Excel, Azure, DevOps</p>
-                </div>
-            </div>
-            <div class="solid-black-border title"><p class="title">IT Analyst, Ecolab</p>
-                <div class="detail-toggle">Job Overview
-                    <p class="hidden">Managed 8-member international team, tracking progress, resolving roadblocks, and maintaining the product backlog in Azure DevOps in order to deliver an enterprise-wide ChatBot.
-                            Served in Project Manager, Business Analyst, and BI Developer roles to assist in the deployment of 60 Marketing, Sales, and Finance reports for the Healthcare department.
-                            Gathered requirements, lead UAT, and orchestrated Go-Live plan of over 10 compensation and bonus reports for the Field Operations Finance team.
-                            Managed the retirement and migration of 100+ Windows 2008 servers across the firm.
-                            Constructed department's production release notes providing Ecolab leadership with a high-level view of business impact from completed development.
-                    </p>
-                    <p class="hidden">Skills/Tools Utilized: PowerBI, SQL, Excel, DevOps, AdobeXD</p>
-                </div>
-            </div>
-            <div class="role solid-black-border title"><p class="title">IT Intern, Ecolab</p>
-                <div class="detail-toggle">Job Overview
-                    <p class="hidden">Built a PowerBI dashboard highlighting the computational costs associated with Microsoft Azure resulting in optimizations, saving the IT department over $50,000 in under 4 months.
-                            Served in Project Manager, Business Analyst, and BI Developer roles assisting in the development of 60+ enterprise reports.
-                    </p>
-                    <p class="hidden">Tech Stack: PowerBI, Excel, DevOps<p></p>
-                </div>
-            </div>
-            <div class=" solid-black-border title"><p class="title">Electrical Engineering Intern, Astronautics Corporation of America</p>
-                <div class="detail-toggle">Job Overview
-                    <p class="hidden">Utilized Excel VBA to analyze over 10,000 flight records to verify the failure rates of electrical components found in the company's Aerospace and Astronautic products.
-                    </p>
-                    <p class="hidden">Tech Stack: Excel, VBA</p>
-                </div>
-            </div>
-        </div>    
-        <div class="blue-background">
-            <h2>Personal Projects</h2>
-            <div class="solid-black-border title"><p class="title">Project 1: Personal Website</p>
-                <div class="detail-toggle">Overview
-                    <p class="hidden">I built a personal website to provide insight on all my professional-related development. 
-                            This is an effort to showcase what I've been able to accomplish in a proffessional setting as well some of my interests outside of my day to day. Please enjoy! 
-                    </p>
-                    <p class="hidden">Tech Stack: JavaScript, HTML, CSS, Git</p>
-                </div>
-            </div>
-            <div class="solid-black-border"><p class="title">Project 2: Pokemon Comparison</p>
-                <div class="detail-toggle title">Overview
-                    <p class="hidden">I built a model in python that compares male and female soccer players to their equivalent in the Pokemon (gen 1) universe. 
-                        This model utilizes over X many (non-physical) features to analyze and predict their equivalent. 
-                        The goal of this project is to showcase my ability to work with mulitple large datasets, understand basic concepts in Python and Pandas, and most importantly find a fun project to complete in Python.
-                    </p>
-                    <p class="hidden">Tech Stack: Python, Pandas, JavaScript, HMTL, CSS, Git,</p>
-                    <p><a href="#">Link to site</a></p>
-                </div>
-            </div>
-            <div class="solid-black-border"><p class="title">Project 3: Script Website</p>
-                <div class="detail-toggle title">Overview
-                    <p class="hidden">I've been working on my scripting for years, practicing leetcode, along with a variety of other problem sets.
-                        I wanted a place where I could easily look up the problem, the solution, and the description of my solution. 
-                    </p>
-                    <p class="hidden">Tech Stack: HTML, CSS, JavaScript, Python, APIs, Git</p>
-                    <p><a href="#">Link to site</a></li></p>
-                </div>
-            </div>
-            <div class="solid-black-border"><p class="title">Project 4: Habit Tracker</p>
-                <div class="title">Overview
-                    <p class="hidden">I came up with this idea after looking for an application to track a variety of my habits that I want to reinforce
-                            given the new year. However, was having trouble finding any on the app store that I enjoyed and weren't full of ads.
-                    </p>
-                    <p class="hidden">Tech Stack: Swift, Xcode</p>
-                    <p> Stack Explanation:
-                        - python: underlying script
-                        - git: version control
-                    </p>
-                    <p><a href="#">Link to github site</a></li></p>
-                </div>
-            </div>
+        <div class="white-background ">
+            <h2 class= "black-font">Contact Information</h2>
+            <a class= "black-font" href="https://github.com/zekomadson">Github</a>
+            <a class= "black-font" href="https://www.linkedin.com/in/zmadson/">LinkedIn</a>
+            <a class= "black-font" href="#">Resume</a>
         </div>
-    </div>
-    <div class="white-background ">
-        <h2 class= "black-font">Contact Information</h2>
-        <a class= "black-font" href="https://github.com/zekomadson">Github</a>
-        <a class= "black-font" href="https://www.linkedin.com/in/zmadson/">LinkedIn</a>
-        <a class= "black-font" href="#">Resume</a>
-    </div>
     </body>
 </html>
