--- a/index.html
+++ b/index.html
@@ -18,15 +18,18 @@
                     <h1 class="header white-font">Zach Madson</h1>
                     <img src="images/portrait.JPG" alt="portrait of Zach Madson"> 
                     <h4 class="white-font">Brooklyn based BI Developer and Data Analyst</h4>
-                    <h4>Aspiring Web Developer & Software Developer.</h4>
+                    <h4>Aspiring Software Engineer.</h4>
                 </div>  
             </div>
         </header>   
-        <div class="white-background ">
+        <div class="white-background vertical-section">
             <h2 class= "black-font">Contact Information</h2>
-            <a class= "black-font" href="https://github.com/zekomadson">Github</a>
-            <a class= "black-font" href="https://www.linkedin.com/in/zmadson/">LinkedIn</a>
-            <a class= "black-font" href="#">Resume</a>
+            <div>
+                <a class= "black-font black-border" href="https://github.com/zekomadson">Github</a>
+                <a class= "black-font black-border" href="https://www.linkedin.com/in/zmadson/">LinkedIn</a>
+                <a class= "black-font black-border" href="#">Resume</a>
+            </div>
+            
         </div>
     </body>
 </html>
