Add javascript file to directory
Addition of the javascript.js file to the directory to hold the JS script that will be used within the site moving forward.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Zeko's Website</title>
         <link rel="stylesheet" href="styles.css">
+        <script src="javascript.js"></script>
     </head>
     <body>
         <header class="container">
@@ -29,7 +30,6 @@
                 <a class= "black-font black-border" href="https://www.linkedin.com/in/zmadson/">LinkedIn</a>
                 <a class= "black-font black-border" href="#">Resume</a>
             </div>
-            
         </div>
     </body>
 </html>
