--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <h1 class="header white-font">Zach Madson</h1>
                     <img src="images/portrait.JPG" alt="portrait of Zach Madson"> 
                     <h4 class="white-font">Brooklyn based BI Developer and Data Analyst</h4>
-                    <h4>Aspiring Software Engineer.</h4>
+                    <h4>Aspiring Web Developer & Software Engineer .</h4>
                 </div>  
             </div>
         </header>   
