Finalize v1 navbar look
Finalized the look and feel of the nav bar in the second version of my website

--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
         <script src="javascript.js"></script>
     </head>
     <body>
-        <header class="container">
-            <div class="vertical-section black-background">
-                <nav>
+        <section class="container">
+            <div class="container black-background">
+                <nav class="navbar">
                     <a class="navbar-item title white-font" href="">Home</a> 
                     <a class="navbar-item title white-font" href="/pages/about.html">About</a> 
                     <a class="navbar-item title white-font" href="/pages/professional.html">Professional Experience</a> 
                     <a class="navbar-item title white-font" href="/pages/projects.html">Projects</a>
                 </nav>   
-                <div>
+                <div class="container">
                     <h1 class="header white-font">Zach Madson</h1>
                     <img src="images/portrait.JPG" alt="portrait of Zach Madson"> 
                     <h4 class="white-font">Brooklyn based BI Developer and Data Analyst</h4>
                     <h4>Aspiring Web Developer & Software Engineer .</h4>
                 </div>  
-            </div>
-        </header>   
-        <div class="white-background vertical-section">
-            <h2 class= "black-font">Contact Information</h2>
-            <div>
-                <a class= "black-font black-border" href="https://github.com/zekomadson">Github</a>
-                <a class= "black-font black-border" href="https://www.linkedin.com/in/zmadson/">LinkedIn</a>
-                <a class= "black-font black-border" href="#">Resume</a>
-            </div>
-        </div>
+            </div>  
+            <div class="container white-background">
+                <h2 class= "black-font">Contact Information</h2>
+                <div>
+                    <a class= "black-font black-border" href="https://github.com/zekomadson">Github</a>
+                    <a class= "black-font black-border" href="https://www.linkedin.com/in/zmadson/">LinkedIn</a>
+                    <a class= "black-font black-border" href="#">Resume</a>
+                </div>
+            </div>    
+        </section>
     </body>
 </html>
