Add hover animations to navbar
Update of the navigation bar along the top to change background color, font color and border color when hovered over.

--- a/index_v2.html
+++ b/index_v2.html
@@ -7,16 +7,16 @@
         <script src="javascript.js"></script>
     </head>
     <body>
-        <nav class="dark-purple-background">
-            <a class="white-border white-font" href="#Home">Home</a>
-            <a class="white-border white-font" href="#Professional">Professional Experience</a>
-            <a class="white-border white-font" href="#Projects">Projects</a>
+        <nav>
+            <a class="white-border white-font dark-purple-background" href="#Home">Home</a>
+            <a class="white-border white-font dark-purple-background" href="#Professional">Professional Experience</a>
+            <a class="white-border white-font dark-purple-background" href="#Projects">Projects</a>
         </nav>
         <section>
             <div id="Home">
-                <p class="centered-text">Zeko Madson</p>
-                <p class="centered-text">Photo placeholder</p>
-                <p class="centered-text">My discription placeholder</p>
+                <p class="centered-text dark-purple-font dark-purple-border">Zeko Madson</p>
+                <p class="centered-text dark-purple-font dark-purple-border">Photo placeholder</p>
+                <p class="centered-text dark-purple-font dark-purple-border">My discription placeholder</p>
             </div>
             <div id="Professional">
                 <p>Job 1 title placeholder</p>
