--- a/index_v2.html
+++ b/index_v2.html
@@ -14,25 +14,33 @@
         </nav>
         <section>
             <div id="Home">
-                <p class="centered-text dark-purple-font dark-purple-border">Zeko Madson</p>
-                <p class="centered-text dark-purple-font dark-purple-border">Photo placeholder</p>
-                <p class="centered-text dark-purple-font dark-purple-border">My discription placeholder</p>
+                <h2 id="nameplate" class="centered-text dark-purple-font dark-purple-border spaced-lettering">Zeko Madson</h2>
+                <p class="centered-text dark-purple-font dark-purple-border spaced-lettering">Data Analyst - BI Developer - Aspiring Software Engineer</p>
             </div>
-            <div id="Professional">
-                <p>Job 1 title placeholder</p>
-                <p>Job 1 details placeholder</p>
-                <p>Job 2 title placeholder</p>
-                <p>Job 2 details placeholder</p>
+            <div class = "dark-purple-border" id="Professional">
+                <h2>Proessional Experience</h2>
+                <div class="hidden">
+                    <p>Job 1 title placeholder</p>
+                    <p>Job 1 details placeholder</p>
+                    <p>Job 2 title placeholder</p>
+                    <p>Job 2 details placeholder</p>
+                </div>
             </div>
-            <div id="Projects">
-                <p>Personal Project 1 - Personal Website: Placeholder</p>
-                <p>Project Description Placeholder</p>
-                <p>Personal Project 2 - Pokemon Converter: Placeholder</p>
-                <p>Project Description Placeholder</p>
+            <div class = "dark-purple-border" id="Projects">
+                <h2>Side Projects</h2>
+                <div class="hidden">
+                    <p>Personal Project 1 - Personal Website: Placeholder</p>
+                    <p>Project Description Placeholder</p>
+                    <p>Personal Project 2 - Pokemon Converter: Placeholder</p>
+                    <p>Project Description Placeholder</p>
+                </div>
             </div>
-            <div>
-                <p>Github Link Placeholder</p>
-                <p>LinkedIn Link Placeholder</p>
+            <div class = "dark-purple-border" id="Links">
+                <h2>Links</h2>
+                <div class="hidden">
+                    <p>Github Link Placeholder</p>
+                    <p>LinkedIn Link Placeholder</p>
+                </div>
             </div>
         </section>
     </body>
